pod-tomcat-sessions-58c5646d66-jbm69.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2023-05-25T21:20:07Z"
  generateName: tomcat-sessions-58c5646d66-
  labels:
    app: tomcat-sessions
    pod-template-hash: 58c5646d66
  name: tomcat-sessions-58c5646d66-jbm69
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: tomcat-sessions-58c5646d66
    uid: 5b5d00ba-525e-4886-ab26-c4ceeace76c5
  resourceVersion: "68817"
  uid: 642eac1e-8df2-4669-8945-89af701ed109
spec:
  containers:
  - image: control.demiflat.org:5000/tomcat-sessions:001
    imagePullPolicy: Always
    name: tomcat-sessions
    ports:
    - containerPort: 8080
      protocol: TCP
    - containerPort: 4000
      protocol: TCP
    - containerPort: 4000
      protocol: UDP      
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-7j2d9
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  imagePullSecrets:
  - name: registrykey
  nodeName: k3sw0.demiflat.org
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-7j2d9
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2023-05-25T21:20:07Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2023-05-25T21:20:09Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2023-05-25T21:20:09Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2023-05-25T21:20:07Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://ed938acac9229f0be104117c236469123e4d670c77a52ab371d1d7e9f2f6855f
    image: control.demiflat.org:5000/tomcat-sessions:001
    imageID: control.demiflat.org:5000/tomcat-sessions@sha256:643bd4ba972ccffc23a43eb85b5ff4ba0ee58a109a48b72cee77435abcf29124
    lastState: {}
    name: tomcat-sessions
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2023-05-25T21:20:09Z"
  hostIP: 10.2.2.198
  phase: Running
  podIP: 10.42.1.9
  podIPs:
  - ip: 10.42.1.9
  qosClass: BestEffort
  startTime: "2023-05-25T21:20:07Z"
